# escape-system-20

./: .gitignore  wifi定位实现.md  密码.txt
aito-software-development-master/: pom.xml
atio-front-end-development-master/: details.html  list.html  sign-in.html  sign-up.html
吸顶灯/吸顶灯/: hardware-integration.md  (+1 more)
吸顶灯源码/: platformio.ini  介绍.txt
吸顶灯源码/src/fire_alert/components/BSP/: CMakeLists.txt
吸顶灯源码/src/fire_alert/components/BSP/ADC/: adc.c
吸顶灯源码/src/fire_alert/components/BSP/GPIO/: gpio.h
吸顶灯源码/src/fire_alert/components/BSP/I2C/: i2c_bus.c  i2c_bus.h
吸顶灯源码/src/fire_alert/components/BSP/WIFI/: wifi.c
吸顶灯源码/src/fire_alert/components/Middlewares/: CMakeLists.txt
吸顶灯源码/src/fire_alert/components/Middlewares/AHT2x/: aht2x.c  aht2x.h
吸顶灯源码/src/fire_alert/components/Middlewares/Buzzer/: buzzer.h
吸顶灯源码/src/fire_alert/components/Middlewares/CoolingFan/: coolingfan.c  coolingfan.h
吸顶灯源码/src/fire_alert/components/Middlewares/CurrentMonitor/: currentmonitor.c  currentmonitor.h
吸顶灯源码/src/fire_alert/components/Middlewares/DHT22/: dht22.c  dht22.h
吸顶灯源码/src/fire_alert/components/Middlewares/ENS160/: ens160.c  ens160.h
吸顶灯源码/src/fire_alert/components/Middlewares/FireTSensor/: firesensor.c  firesensor.h
吸顶灯源码/src/fire_alert/components/Middlewares/LED_Light/: ledlight.c  ledlight.h
吸顶灯源码/src/fire_alert/components/Middlewares/MQTT/: mqtt.c  mqtt.h
吸顶灯源码/src/fire_alert/components/Middlewares/State_Light/: statelight.c  statelight.h
应急灯文档/: README.md
逃生/: .gitignore  docker-compose.yml  test_bcrypt.js  部署指南-TMUX前端启动.md  部署指南-服务器启动.md  部署指南.md  项目文档.md
(+385 files in other folders)
